--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ dj-database-url==0.3.0
 dj-static==0.0.5
 MySQL-python==1.2.5
 gunicorn==18.0
-https://github.com/tgs/django-badgekit-webhooks/tarball/master
+-e ./apps/badgekit_webhooks
