--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ django-jsonfield==0.9.12
 dj-database-url==0.3.0
 dj-static==0.0.5
 MySQL-python==1.2.5
-gunicorn==18.0
+waitress==0.8.8
 -e ./apps/badgekit_webhooks
