Document the env vars

--- a/template.env
+++ b/template.env
@@ -1,13 +1,36 @@
 # Copy this file to .env, then
 # Fill in values for these variables, and then
 # run 'foreman start' to run the app
+
+# Set DEBUG=True for development.
 DEBUG=True
 
-# TODO: database config
+# Setting this will cause the project to use an external database; otherwise it
+# will create an SQLite database called 'dev.db'.
+#DATABASE_URL=mysql://user:pass@server/dbname
 
+# Django's SECRET_KEY setting - used for sessions and cookies and stuff.
 SESSION_SECRET_KEY='something'
 
+# The key that BadgeKit-API will sign its JWT requests with - it should match
+# the key in the webhooks table of the BadgeKit-API database.
 BADGEKIT_JWT_KEY='something else'
 
-# this is just used in the test suite
-BADGEKIT_SKIP_JWT_AUTH=False
+# This is just used in the test suite - don't use it.
+# Default False.
+#BADGEKIT_SKIP_JWT_AUTH=False
+
+# Send claim emails to people when the webhook is activated?  If this is true,
+# but EMAIL_HOST is not set, then the email will be printed to the development
+# console instead of sent.
+#BADGEKIT_SEND_CLAIM_EMAILS=False
+
+# If you set an EMAIL_HOST, the project will try to use
+# a real email server.  So you should set the other
+# EMAIL_* variables.
+#EMAIL_HOST=smtp.example.com
+#EMAIL_HOST_USER=smtpuser
+#EMAIL_HOST_PASSWORD=smtppassword
+
+# The e-mail address that "claim your badge!" emails will appear to come from.
+#DEFAULT_FROM_EMAIL=nobody@example.com
