Add new parameters for badgekit_webhooks
This is needed for the 'claimcodes' branch of django-badgekit-webhooks.

--- a/template.env
+++ b/template.env
@@ -2,6 +2,8 @@
 # Fill in values for these variables, and then
 # run 'foreman start' to run the app
 
+# If a setting is not commented out, you probably need to set it to a good value for you.
+
 # Set DEBUG=True for development.
 DEBUG=True
 
@@ -15,6 +17,22 @@ SESSION_SECRET_KEY='something'
 # The key that BadgeKit-API will sign its JWT requests with - it should match
 # the key in the webhooks table of the BadgeKit-API database.
 BADGEKIT_JWT_KEY='something else'
+
+# The key that this app should use to sign requests to BadgeKit-API - it is
+# probably the 'master' key.
+BADGEKIT_API_KEY='yet another secret'
+
+# The URL of the BadgeKit-API server.
+BADGEKIT_API_URL='http://localhost:8080/'
+
+# The 'system' that badges are issued under, in BadgeKit-API.
+# The tutorial might tell you to name yours 'badgekit'
+BADGEKIT_SYSTEM='badgekit'
+
+# The 'issuer' and 'program' you're using in BadgeKit-API.
+# One or both can be undefined, if you're not using them.
+#BADGEKIT_ISSUER=organization
+#BADGEKIT_PROGRAM=program
 
 # This is just used in the test suite - don't use it.
 # Default False.
