Add a note about setting the path

--- a/template.env
+++ b/template.env
@@ -52,3 +52,9 @@ BADGEKIT_SYSTEM='badgekit'
 
 # The e-mail address that "claim your badge!" emails will appear to come from.
 #DEFAULT_FROM_EMAIL=nobody@example.com
+
+# If you're running this service inside a virtualenv,
+# setting your PATH to the virtualenv's bin dir means that
+# you don't have to have waitress-serve or any of the other
+# dependencies installed globally.
+#PATH=/path/to/the/virtualenv
