Docs about the badgekit api

--- a/template.env
+++ b/template.env
@@ -22,7 +22,10 @@ BADGEKIT_JWT_KEY='something else'
 # probably the 'master' key.
 BADGEKIT_API_KEY='yet another secret'
 
-# The URL of the BadgeKit-API server.
+# The URL of the BadgeKit-API server.  Note that this becomes public - the
+# Badge Backpack must be able to reach this URL in order for the user to
+# push the badge out.  So set it to a publicly-viewable name, even if
+# badgekit-api is running on the same server.  Unless you're in development.
 BADGEKIT_API_URL='http://localhost:8080/'
 
 # The 'system' that badges are issued under, in BadgeKit-API.
